Fix scroll overflow on mobile

--- a/style.css
+++ b/style.css
@@ -206,6 +206,6 @@ button {
     width: 100%;
   }
   body {
-    overflow: hidden;
+    height: 100%;
   }
 }
